added LCL widgetset gtk2 to lazarus rpm
 SVN 8592@trunk

--- a/tools/install/rpm/lazarus.spec.template
+++ b/tools/install/rpm/lazarus.spec.template
@@ -30,6 +30,10 @@ if [ -n "$FPCCfg" ]; then
 fi
 make all OPT="$MAKEOPTS" USESVN2REVISIONINC=0
 make tools OPT="$MAKEOPTS"
+# build gtk2 .ppu
+export LCL_PLATFORM=gtk2
+make lcl ideintf packager/registration bigidecomponents
+export LCL_PLATFORM=
 strip lazarus
 strip startlazarus
 
