make lazarus.res also for bigide on win32
 SVN 8599@trunk

--- a/ide/Makefile.fpc
+++ b/ide/Makefile.fpc
@@ -137,6 +137,9 @@ idepkg: $(COMPILER_UNITTARGETDIR)
 #-----------------------------------------------------------------------------
 bigide: $(COMPILER_UNITTARGETDIR)
         -$(DEL) $(COMPILER_UNITTARGETDIR)/pkgmanager$(PPUEXT)
+ifeq ($(OS_TARGET), win32)
+        $(MAKE) lazarus.res
+endif
         $(MAKE) --assume-new=../lazarus.pp lazarus$(EXEEXT) OPT='$(OPT) $(BIG_IDE_OPTIONS)'
 
 #-----------------------------------------------------------------------------
