renamed fpcsrc to fpc-src
 SVN 8602@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -2225,9 +2225,9 @@ tools/delete_non_cvs_files.pl -text svneol=native#application/x-perl
 tools/find_non_cvs_files.pl -text svneol=native#application/x-perl
 tools/getallmofiles.sh -text svneol=native#application/x-sh
 tools/getallpofiles.sh -text svneol=native#application/x-sh
+tools/install/build_fpc-src_rpm.sh svneol=native#text/plain
 tools/install/build_fpc_rpm.sh -text svneol=native#application/x-sh
 tools/install/build_fpc_snaphot_rpm.sh svneol=native#text/plain
-tools/install/build_fpcsrc_rpm.sh -text svneol=native#application/x-sh
 tools/install/create_clean_fpcsrc_directory.sh -text svneol=native#application/x-sh
 tools/install/create_clean_lazarus_directory.sh -text svneol=native#application/x-sh
 tools/install/create_fpc_deb.sh -text svneol=native#application/x-sh
@@ -2245,6 +2245,7 @@ tools/install/cvsexportlocal.pas svneol=native#text/pascal
 tools/install/do_nothing.sh -text svneol=native#application/x-sh
 tools/install/download_and_build_fpc_rpm.sh -text svneol=native#application/x-sh
 tools/install/file_filter.sh -text svneol=native#application/x-sh
+tools/install/fpc-src.spec svneol=native#text/plain
 tools/install/get_lazarus_version.sh -text svneol=native#application/x-sh
 tools/install/macosx/fpc_installer_info.zip -text svneol=unset#application/zip
 tools/install/replace_in_files.pl -text svneol=native#application/x-perl
