--- a/components/printers/sample/selectprinter.lpi
+++ b/components/printers/sample/selectprinter.lpi
@@ -11,29 +11,29 @@
       <IconPath Value="./"/>
       <TargetFileExt Value=".exe"/>
       <Title Value="selectprinter"/>
-      <ActiveEditorIndexAtStart Value="0"/>
+      <ActiveEditorIndexAtStart Value="1"/>
     </General>
     <LazDoc Paths=""/>
-    <Units Count="4">
+    <Units Count="6">
       <Unit0>
         <CursorPos X="19" Y="15"/>
         <Filename Value="selectprinter.lpr"/>
         <IsPartOfProject Value="True"/>
         <TopLine Value="1"/>
         <UnitName Value="selectprinter"/>
-        <UsageCount Value="152"/>
+        <UsageCount Value="154"/>
       </Unit0>
       <Unit1>
-        <CursorPos X="38" Y="205"/>
+        <CursorPos X="51" Y="101"/>
         <EditorIndex Value="0"/>
         <Filename Value="frmselprinter.pas"/>
         <ComponentName Value="Form1"/>
         <IsPartOfProject Value="True"/>
         <Loaded Value="True"/>
         <ResourceFilename Value="frmselprinter.lrs"/>
-        <TopLine Value="191"/>
+        <TopLine Value="81"/>
         <UnitName Value="frmselprinter"/>
-        <UsageCount Value="152"/>
+        <UsageCount Value="154"/>
       </Unit1>
       <Unit2>
         <CursorPos X="10" Y="296"/>
@@ -41,7 +41,7 @@
         <IsPartOfProject Value="True"/>
         <TopLine Value="1"/>
         <UnitName Value="text"/>
-        <UsageCount Value="98"/>
+        <UsageCount Value="100"/>
       </Unit2>
       <Unit3>
         <CursorPos X="1" Y="1"/>
@@ -49,8 +49,26 @@
         <IsPartOfProject Value="True"/>
         <TopLine Value="1"/>
         <UnitName Value="text"/>
-        <UsageCount Value="98"/>
+        <UsageCount Value="100"/>
       </Unit3>
+      <Unit4>
+        <CursorPos X="1" Y="31"/>
+        <EditorIndex Value="1"/>
+        <Filename Value="/Users/flo/pascal/lazarus/components/Makefile.fpc"/>
+        <Loaded Value="True"/>
+        <SyntaxHighlighter Value="None"/>
+        <TopLine Value="1"/>
+        <UsageCount Value="10"/>
+      </Unit4>
+      <Unit5>
+        <CursorPos X="1" Y="33"/>
+        <EditorIndex Value="2"/>
+        <Filename Value="/Users/flo/pascal/lazarus/ide/lazarus.pp"/>
+        <Loaded Value="True"/>
+        <TopLine Value="9"/>
+        <UnitName Value="Lazarus"/>
+        <UsageCount Value="10"/>
+      </Unit5>
     </Units>
     <PublishOptions>
       <Version Value="2"/>
@@ -64,20 +82,36 @@
         <LaunchingApplication PathPlusParams="/usr/X11R6/bin/xterm -T 'Lazarus Run Output' -e $(LazarusDir)/tools/runwait.sh $(TargetCmdLine)"/>
       </local>
     </RunParams>
-    <RequiredPackages Count="2">
+    <RequiredPackages Count="3">
       <Item1>
-        <PackageName Value="Printer4Lazarus"/>
-        <MinVersion Build="1" Valid="True"/>
+        <PackageName Value="SQLDBLaz"/>
+        <MinVersion Major="1" Valid="True"/>
       </Item1>
       <Item2>
-        <PackageName Value="LCL"/>
+        <PackageName Value="Printer4Lazarus"/>
+        <MinVersion Build="1" Valid="True"/>
       </Item2>
+      <Item3>
+        <PackageName Value="LCL"/>
+      </Item3>
     </RequiredPackages>
-    <JumpHistory Count="1" HistoryIndex="0">
+    <JumpHistory Count="4" HistoryIndex="3">
       <Position1>
         <Filename Value="frmselprinter.pas"/>
-        <Caret Line="224" Column="13" TopLine="191"/>
+        <Caret Line="88" Column="14" TopLine="81"/>
       </Position1>
+      <Position2>
+        <Filename Value="frmselprinter.pas"/>
+        <Caret Line="86" Column="14" TopLine="81"/>
+      </Position2>
+      <Position3>
+        <Filename Value="/Users/flo/pascal/lazarus/ide/lazarus.pp"/>
+        <Caret Line="50" Column="70" TopLine="25"/>
+      </Position3>
+      <Position4>
+        <Filename Value="/Users/flo/pascal/lazarus/ide/lazarus.pp"/>
+        <Caret Line="33" Column="1" TopLine="9"/>
+      </Position4>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
