--- a/components/printers/sample/selectprinter.lpi
+++ b/components/printers/sample/selectprinter.lpi
@@ -6,15 +6,16 @@
     <General>
       <Flags>
         <SaveClosedFiles Value="False"/>
+        <SaveOnlyProjectUnits Value="True"/>
       </Flags>
       <MainUnit Value="0"/>
       <IconPath Value="./"/>
       <TargetFileExt Value=".exe"/>
       <Title Value="selectprinter"/>
-      <ActiveEditorIndexAtStart Value="1"/>
+      <ActiveEditorIndexAtStart Value="0"/>
     </General>
     <LazDoc Paths=""/>
-    <Units Count="6">
+    <Units Count="4">
       <Unit0>
         <CursorPos X="19" Y="15"/>
         <Filename Value="selectprinter.lpr"/>
@@ -24,7 +25,7 @@
         <UsageCount Value="154"/>
       </Unit0>
       <Unit1>
-        <CursorPos X="51" Y="101"/>
+        <CursorPos X="34" Y="109"/>
         <EditorIndex Value="0"/>
         <Filename Value="frmselprinter.pas"/>
         <ComponentName Value="Form1"/>
@@ -51,24 +52,6 @@
         <UnitName Value="text"/>
         <UsageCount Value="100"/>
       </Unit3>
-      <Unit4>
-        <CursorPos X="1" Y="31"/>
-        <EditorIndex Value="1"/>
-        <Filename Value="/Users/flo/pascal/lazarus/components/Makefile.fpc"/>
-        <Loaded Value="True"/>
-        <SyntaxHighlighter Value="None"/>
-        <TopLine Value="1"/>
-        <UsageCount Value="10"/>
-      </Unit4>
-      <Unit5>
-        <CursorPos X="1" Y="33"/>
-        <EditorIndex Value="2"/>
-        <Filename Value="/Users/flo/pascal/lazarus/ide/lazarus.pp"/>
-        <Loaded Value="True"/>
-        <TopLine Value="9"/>
-        <UnitName Value="Lazarus"/>
-        <UsageCount Value="10"/>
-      </Unit5>
     </Units>
     <PublishOptions>
       <Version Value="2"/>
@@ -82,37 +65,15 @@
         <LaunchingApplication PathPlusParams="/usr/X11R6/bin/xterm -T 'Lazarus Run Output' -e $(LazarusDir)/tools/runwait.sh $(TargetCmdLine)"/>
       </local>
     </RunParams>
-    <RequiredPackages Count="3">
+    <RequiredPackages Count="2">
       <Item1>
-        <PackageName Value="SQLDBLaz"/>
-        <MinVersion Major="1" Valid="True"/>
-      </Item1>
-      <Item2>
         <PackageName Value="Printer4Lazarus"/>
         <MinVersion Build="1" Valid="True"/>
-      </Item2>
-      <Item3>
+      </Item1>
+      <Item2>
         <PackageName Value="LCL"/>
-      </Item3>
+      </Item2>
     </RequiredPackages>
-    <JumpHistory Count="4" HistoryIndex="3">
-      <Position1>
-        <Filename Value="frmselprinter.pas"/>
-        <Caret Line="88" Column="14" TopLine="81"/>
-      </Position1>
-      <Position2>
-        <Filename Value="frmselprinter.pas"/>
-        <Caret Line="86" Column="14" TopLine="81"/>
-      </Position2>
-      <Position3>
-        <Filename Value="/Users/flo/pascal/lazarus/ide/lazarus.pp"/>
-        <Caret Line="50" Column="70" TopLine="25"/>
-      </Position3>
-      <Position4>
-        <Filename Value="/Users/flo/pascal/lazarus/ide/lazarus.pp"/>
-        <Caret Line="33" Column="1" TopLine="9"/>
-      </Position4>
-    </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
     <Version Value="5"/>
