--- a/.gitattributes
+++ b/.gitattributes
@@ -1170,6 +1170,10 @@ ideintf/actionseditorstd.lfm svneol=native#text/plain
 ideintf/actionseditorstd.lrs svneol=native#text/pascal
 ideintf/actionseditorstd.pas svneol=native#text/pascal
 ideintf/allideintf.pas svneol=native#text/pascal
+ideintf/checkgroupeditordlg.lfm svneol=native#text/plain
+ideintf/checkgroupeditordlg.lrs svneol=native#text/plain
+ideintf/checklistboxeditordlg.lfm svneol=native#text/plain
+ideintf/checklistboxeditordlg.lrs svneol=native#text/plain
 ideintf/collectionpropeditform.lfm svneol=native#text/plain
 ideintf/collectionpropeditform.lrs svneol=native#text/plain
 ideintf/columndlg.pp svneol=native#text/pascal
