--- a/components/Makefile.fpc
+++ b/components/Makefile.fpc
@@ -25,12 +25,14 @@ bigidecomponents: all
         $(MAKE) -C printers
         $(MAKE) -C cgi
         $(MAKE) -C cgi/ide
-        $(MAKE) -C tdbf
         $(MAKE) -C turbopower_ipro
         $(MAKE) -C jpeg
         $(MAKE) -C fpcunit
         $(MAKE) -C fpcunit/ide
         $(MAKE) -C projecttemplates
+ifneq ($(OS_TARGET),darwin)
+        $(MAKE) -C tdbf
         $(MAKE) -C sqldb
+endif
 
 cleanlaz: clean
