added MemDSLaz to bigide
 SVN 8652@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -171,6 +171,8 @@ components/macfiles/examples/createmacapplication.lpr svneol=native#text/plain
 components/macfiles/macapplicationres.pas svneol=native#text/plain
 components/macfiles/macosfiles.lpk svneol=native#text/plain
 components/macfiles/macosfiles.pas svneol=native#text/plain
+components/memds/Makefile svneol=native#text/plain
+components/memds/Makefile.fpc svneol=native#text/plain
 components/memds/frmselectdataset.lfm svneol=native#text/plain
 components/memds/frmselectdataset.lrs svneol=native#text/pascal
 components/memds/frmselectdataset.pp svneol=native#text/pascal
