--- a/components/Makefile.fpc
+++ b/components/Makefile.fpc
@@ -30,6 +30,7 @@ bigidecomponents: all
         $(MAKE) -C fpcunit
         $(MAKE) -C fpcunit/ide
         $(MAKE) -C projecttemplates
+        $(MAKE) -C memds
 ifneq ($(OS_TARGET),darwin)
         $(MAKE) -C tdbf
         $(MAKE) -C sqldb
