--- a/ide/Makefile.fpc
+++ b/ide/Makefile.fpc
@@ -103,7 +103,8 @@ BIG_IDE_OPTIONS=-dBigIDE $(LAZARUS_LIBPATHS) \
   -Fu../components/fpcunit/lib/$(CPU_TARGET)-$(OS_TARGET) \
   -Fu../components/fpcunit/ide/lib/$(CPU_TARGET)-$(OS_TARGET) \
   -Fu../components/projecttemplates/lib/$(CPU_TARGET)-$(OS_TARGET) \
-  -Fu../components/sqldb/lib/$(CPU_TARGET)-$(OS_TARGET)
+  -Fu../components/sqldb/lib/$(CPU_TARGET)-$(OS_TARGET) \
+  -Fu../components/memds/lib/$(CPU_TARGET)-$(OS_TARGET)
 
 #-----------------------------------------------------------------------------
 [rules]
