added SDFLaz to bigide
 SVN 8653@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -334,6 +334,8 @@ components/rx/strholder.lrs svneol=native#text/pascal
 components/rx/strholder.pp svneol=native#text/pascal
 components/rx/tmrumanager.xpm -text svneol=native#image/x-xpixmap
 components/rx/tstrholder.xpm -text svneol=native#image/x-xpixmap
+components/sdf/Makefile svneol=native#text/plain
+components/sdf/Makefile.fpc svneol=native#text/plain
 components/sdf/registersdf.lrs svneol=native#text/pascal
 components/sdf/registersdf.pas svneol=native#text/pascal
 components/sdf/sdflaz.lpk svneol=native#text/pascal
