--- a/ide/Makefile.fpc
+++ b/ide/Makefile.fpc
@@ -104,6 +104,7 @@ BIG_IDE_OPTIONS=-dBigIDE $(LAZARUS_LIBPATHS) \
   -Fu../components/fpcunit/ide/lib/$(CPU_TARGET)-$(OS_TARGET) \
   -Fu../components/projecttemplates/lib/$(CPU_TARGET)-$(OS_TARGET) \
   -Fu../components/sqldb/lib/$(CPU_TARGET)-$(OS_TARGET) \
+  -Fu../components/sdf/lib/$(CPU_TARGET)-$(OS_TARGET) \
   -Fu../components/memds/lib/$(CPU_TARGET)-$(OS_TARGET)
 
 #-----------------------------------------------------------------------------
