converted Image List Editor and List View Editor to lfm  from Tomas Gregorovic
 SVN 8654@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1201,8 +1201,12 @@ ideintf/helphtml.pas svneol=native#text/pascal
 ideintf/helpintf.pas svneol=native#text/pascal
 ideintf/idecommands.pas svneol=native#text/pascal
 ideintf/idewindowintf.pas svneol=native#text/plain
+ideintf/imagelisteditor.lfm svneol=native#text/plain
+ideintf/imagelisteditor.lrs svneol=native#text/plain
 ideintf/imagelisteditor.pp svneol=native#text/pascal
 ideintf/lazideintf.pas svneol=native#text/pascal
+ideintf/listviewpropedit.lfm svneol=native#text/plain
+ideintf/listviewpropedit.lrs svneol=native#text/plain
 ideintf/listviewpropedit.pp svneol=native#text/pascal
 ideintf/macrointf.pas svneol=native#text/pascal
 ideintf/maskpropedit.lfm svneol=native#text/plain
