added iceberg (http://s.sudre.free.fr/Software/Iceberg.html) templates for MAC OS X installer
 SVN 8656@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -2255,7 +2255,12 @@ tools/install/download_and_build_fpc_rpm.sh -text svneol=native#application/x-sh
 tools/install/file_filter.sh -text svneol=native#application/x-sh
 tools/install/fpc-src.spec svneol=native#text/plain
 tools/install/get_lazarus_version.sh -text svneol=native#application/x-sh
+tools/install/macosx/fpc-release.packproj.template svneol=native#text/plain
+tools/install/macosx/fpc.packproj.template svneol=native#text/plain
 tools/install/macosx/fpc_installer_info.zip -text svneol=unset#application/zip
+tools/install/macosx/fpcsrc-release.packproj.template svneol=native#text/plain
+tools/install/macosx/fpcsrc.packproj.template svneol=native#text/plain
+tools/install/macosx/lazarus.packproj.template svneol=native#text/plain
 tools/install/replace_in_files.pl -text svneol=native#application/x-perl
 tools/install/rpm/create_nonroot_rpmmacros.sh svneol=native#text/plain
 tools/install/rpm/fpc.spec.template svneol=native#text/plain
