--- a/.gitattributes
+++ b/.gitattributes
@@ -1150,6 +1150,7 @@ ide/todolist.lfm svneol=native#text/plain
 ide/todolist.lrs svneol=native#text/plain
 ide/todolist.pp svneol=native#text/pascal
 ide/transfermacros.pp svneol=native#text/pascal
+ide/unitdependencies.lfm svneol=native#text/plain
 ide/unitdependencies.lrs svneol=native#text/pascal
 ide/unitdependencies.pas svneol=native#text/pascal
 ide/uniteditor.lfm svneol=native#text/plain
