added japanese translation
 SVN 8693@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1594,6 +1594,7 @@ languages/lazaruside.fr.po svneol=native#text/plain
 languages/lazaruside.he.po svneol=native#text/plain
 languages/lazaruside.it.po svneol=native#text/plain
 languages/lazaruside.itiso.po svneol=native#text/plain
+languages/lazaruside.ja.po svneol=native#text/plain
 languages/lazaruside.nl.po svneol=native#text/plain
 languages/lazaruside.pb.po svneol=native#text/plain
 languages/lazaruside.pl.po svneol=native#text/plain
