added anchor docking example
 SVN 8722@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -766,6 +766,14 @@ examples/address_book/mybook.dbf svneol=native#unset
 examples/address_book/mybook.mdx svneol=native#unset
 examples/address_book/mybook2.dbf svneol=native#unset
 examples/address_book/mybook2.mdx svneol=native#unset
+examples/anchordocking/dockform1unit.lfm svneol=native#text/plain
+examples/anchordocking/dockform1unit.lrs svneol=native#text/plain
+examples/anchordocking/dockform1unit.pas svneol=native#text/plain
+examples/anchordocking/dockform2unit.lfm svneol=native#text/plain
+examples/anchordocking/dockform2unit.lrs svneol=native#text/plain
+examples/anchordocking/dockform2unit.pas svneol=native#text/plain
+examples/anchordocking/docking1.lpi svneol=native#text/plain
+examples/anchordocking/docking1.lpr svneol=native#text/plain
 examples/autosize/childsizinglayout/childsizinglayout.lpi svneol=native#text/plain
 examples/autosize/childsizinglayout/childsizinglayout.lpr svneol=native#text/plain
 examples/autosize/childsizinglayout/mainunit.lfm svneol=native#text/plain
