--- a/.gitattributes
+++ b/.gitattributes
@@ -904,8 +904,8 @@ examples/openglcontrol/data/texture1.bmp -text svneol=unset#image/bmp
 examples/openglcontrol/data/texture2.bmp -text svneol=unset#image/bmp
 examples/openglcontrol/data/texture3.bmp -text svneol=unset#image/bmp
 examples/openglcontrol/exampleform.pp svneol=native#text/pascal
-examples/openglcontrol/gtkglarea_demo.lpi svneol=native#text/plain
-examples/openglcontrol/gtkglarea_demo.pp svneol=native#text/pascal
+examples/openglcontrol/openglcontrol.lpi svneol=native#text/plain
+examples/openglcontrol/openglcontrol_demo.pas svneol=native#text/pascal
 examples/postscript/samplepostscriptcanvas.lpi svneol=native#text/plain
 examples/postscript/samplepostscriptcanvas.lpr svneol=native#text/pascal
 examples/postscript/usamplepostscriptcanvas.lfm svneol=native#text/plain
