--- a/examples/openglcontrol/openglcontrol_demo.lpi
+++ b/examples/openglcontrol/openglcontrol_demo.lpi
@@ -5,38 +5,16 @@
     <Version Value="5"/>
     <General>
       <Flags>
-        <SaveOnlyProjectUnits Value="True"/>
         <MainUnitHasCreateFormStatements Value="False"/>
         <MainUnitHasTitleStatement Value="False"/>
       </Flags>
+      <SessionStorage Value="InProjectDir"/>
       <MainUnit Value="0"/>
-      <ActiveEditorIndexAtStart Value="4"/>
       <IconPath Value="./"/>
       <TargetFileExt Value=""/>
-      <Title Value="gtkglarea_demo"/>
+      <Title Value="openglcontrol_demo"/>
     </General>
-    <Units Count="2">
-      <Unit0>
-        <CursorPos X="15" Y="18"/>
-        <EditorIndex Value="0"/>
-        <Filename Value="gtkglarea_demo.pp"/>
-        <IsPartOfProject Value="True"/>
-        <Loaded Value="True"/>
-        <TopLine Value="1"/>
-        <UnitName Value="GTKGLArea_Demo"/>
-        <UsageCount Value="28"/>
-      </Unit0>
-      <Unit1>
-        <CursorPos X="34" Y="828"/>
-        <EditorIndex Value="4"/>
-        <Filename Value="exampleform.pp"/>
-        <IsPartOfProject Value="True"/>
-        <Loaded Value="True"/>
-        <TopLine Value="801"/>
-        <UnitName Value="ExampleForm"/>
-        <UsageCount Value="28"/>
-      </Unit1>
-    </Units>
+    <LazDoc Paths=""/>
     <PublishOptions>
       <Version Value="2"/>
       <IgnoreBinaries Value="False"/>
@@ -52,12 +30,24 @@
         <PackageName Value="LCL"/>
       </Item1>
       <Item2>
-        <PackageName Value="GTKOpenGL"/>
+        <PackageName Value="LazOpenGLContext"/>
       </Item2>
     </RequiredPackages>
+    <Units Count="2">
+      <Unit0>
+        <Filename Value="openglcontrol_demo.pas"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="OpenGLControl_Demo"/>
+      </Unit0>
+      <Unit1>
+        <Filename Value="exampleform.pp"/>
+        <IsPartOfProject Value="True"/>
+        <UnitName Value="ExampleForm"/>
+      </Unit1>
+    </Units>
   </ProjectOptions>
   <CompilerOptions>
-    <Version Value="4"/>
+    <Version Value="5"/>
     <SearchPaths>
       <LCLWidgetType Value="gtk"/>
       <SrcPath Value="$(LazarusDir)/lcl/;$(LazarusDir)/lcl/interfaces/gtk/"/>
