--- a/.gitattributes
+++ b/.gitattributes
@@ -1082,6 +1082,7 @@ ide/keymapping.pp svneol=native#text/pascal
 ide/keymapschemedlg.lfm svneol=native#text/plain
 ide/keymapschemedlg.lrs svneol=native#text/pascal
 ide/keymapschemedlg.pas svneol=native#text/pascal
+ide/lazarus.lpi svneol=native#text/plain
 ide/lazarus.pp svneol=native#text/pascal
 ide/lazarus.rc svneol=native#text/plain
 ide/lazarus_about_logo.lrs svneol=native#text/pascal
