added qt dyn lib binding, implemented TApplication, TCustomForm, TCustomButton, TCustomMemo, TMouse, TCanvas  fro Felipe
 SVN 8751@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -2002,19 +2002,17 @@ lcl/interfaces/gtk2/gtk2wsspin.pp svneol=native#text/pascal
 lcl/interfaces/gtk2/gtk2wsstdctrls.pp svneol=native#text/pascal
 lcl/interfaces/gtk2/gtk2wstoolwin.pp svneol=native#text/pascal
 lcl/interfaces/gtk2/interfaces.pas svneol=native#text/pascal
-lcl/interfaces/qt/build.sh -text svneol=native#application/x-sh
-lcl/interfaces/qt/include/lpushbt.h svneol=native#text/plain
-lcl/interfaces/qt/include/lzqt.h svneol=native#text/plain
-lcl/interfaces/qt/include/lztypes.h svneol=native#text/plain
-lcl/interfaces/qt/include/lzwidget.h svneol=native#text/plain
-lcl/interfaces/qt/include/qtengine.h svneol=native#text/plain
+lcl/interfaces/qt/README.txt svneol=native#text/plain
 lcl/interfaces/qt/interfaces.pp svneol=native#text/pascal
+lcl/interfaces/qt/libqt4intf.so -text
 lcl/interfaces/qt/qt.pp svneol=native#text/pascal
+lcl/interfaces/qt/qt4.pas svneol=native#text/plain
 lcl/interfaces/qt/qtcallback.inc svneol=native#text/pascal
 lcl/interfaces/qt/qtint.pp svneol=native#text/pascal
 lcl/interfaces/qt/qtlclintf.inc svneol=native#text/pascal
 lcl/interfaces/qt/qtlclintfh.inc svneol=native#text/pascal
 lcl/interfaces/qt/qtobject.inc svneol=native#text/pascal
+lcl/interfaces/qt/qtprivate.pp svneol=native#text/plain
 lcl/interfaces/qt/qtwinapi.inc svneol=native#text/pascal
 lcl/interfaces/qt/qtwinapih.inc svneol=native#text/pascal
 lcl/interfaces/qt/qtwsactnlist.pp svneol=native#text/pascal
@@ -2042,12 +2040,6 @@ lcl/interfaces/qt/qtwspairsplitter.pp svneol=native#text/pascal
 lcl/interfaces/qt/qtwsspin.pp svneol=native#text/pascal
 lcl/interfaces/qt/qtwsstdctrls.pp svneol=native#text/pascal
 lcl/interfaces/qt/qtwstoolwin.pp svneol=native#text/pascal
-lcl/interfaces/qt/src/lpushbt.cpp svneol=native#text/plain
-lcl/interfaces/qt/src/lzqt.cpp svneol=native#text/plain
-lcl/interfaces/qt/src/lzwidget.cpp svneol=native#text/plain
-lcl/interfaces/qt/src/qtengine.cpp svneol=native#text/plain
-lcl/interfaces/qt/test/qt.pp svneol=native#text/pascal
-lcl/interfaces/qt/test/test.pp svneol=native#text/pascal
 lcl/interfaces/win32/interfaces.pp svneol=native#text/pascal
 lcl/interfaces/win32/win32callback.inc svneol=native#text/pascal
 lcl/interfaces/win32/win32def.pp svneol=native#text/pascal
