Converted exttooldialog to LFM  from Darius
 SVN 8756@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1041,6 +1041,8 @@ ide/environmentopts.pp svneol=native#text/pascal
 ide/extractprocdlg.lfm svneol=native#text/plain
 ide/extractprocdlg.lrs svneol=native#text/pascal
 ide/extractprocdlg.pas svneol=native#text/pascal
+ide/exttooldialog.lfm svneol=native#text/plain
+ide/exttooldialog.lrs svneol=native#text/plain
 ide/exttooldialog.pas svneol=native#text/pascal
 ide/exttooleditdlg.pas svneol=native#text/pascal
 ide/filereferencelist.pas svneol=native#text/pascal
@@ -1460,6 +1462,7 @@ images/designer/anchorleftright.xpm -text svneol=native#image/x-xpixmap
 images/designer/anchorrightright.xpm -text svneol=native#image/x-xpixmap
 images/designer/anchortopbottom.xpm -text svneol=native#image/x-xpixmap
 images/designer/anchortoptop.xpm -text svneol=native#image/x-xpixmap
+images/down.xpm svneol=native#text/plain
 images/downarrow.ico -text svneol=unset#image/x-icon
 images/downarrow.xpm -text svneol=native#image/x-xpixmap
 images/fonts.ico -text svneol=unset#image/x-icon
@@ -1591,6 +1594,7 @@ images/unitdependencies/srctype_parseerror_22x22.xpm -text svneol=native#image/x
 images/unitdependencies/srctype_program_22x22.xpm -text svneol=native#image/x-xpixmap
 images/unitdependencies/srctype_unit_22x22.xpm -text svneol=native#image/x-xpixmap
 images/unitdependencies/srctype_unknown_22x22.xpm -text svneol=native#image/x-xpixmap
+images/up.xpm svneol=native#text/plain
 images/uparrow.ico -text svneol=unset#image/x-icon
 images/uparrow.xpm -text svneol=native#image/x-xpixmap
 images/vase_trans.xpm -text svneol=native#image/x-xpixmap
