--- a/.gitattributes
+++ b/.gitattributes
@@ -1246,6 +1246,9 @@ ideintf/texttools.pas svneol=native#text/pascal
 ideintf/treeviewpropedit.lfm svneol=native#text/plain
 ideintf/treeviewpropedit.lrs svneol=native#text/plain
 ideintf/treeviewpropedit.pas svneol=native#text/plain
+images/22x22/document-open.xpm svneol=native#text/plain
+images/22x22/go-home.xpm svneol=native#text/plain
+images/22x22/view-refresh.xpm svneol=native#text/plain
 images/LazarusForm.bmp -text svneol=unset#image/bmp
 images/LazarusForm.ico -text svneol=unset#image/x-icon
 images/LazarusProject.ico -text svneol=unset#image/x-icon
