converted StringGrid Editor, Columns Editor and FindInFiles to lfm  from Tomas Gregorovic
 SVN 8763@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1046,6 +1046,8 @@ ide/exttooldialog.lrs svneol=native#text/plain
 ide/exttooldialog.pas svneol=native#text/pascal
 ide/exttooleditdlg.pas svneol=native#text/pascal
 ide/filereferencelist.pas svneol=native#text/pascal
+ide/findinfilesdlg.lfm svneol=native#text/plain
+ide/findinfilesdlg.lrs svneol=native#text/plain
 ide/findinfilesdlg.pas svneol=native#text/pascal
 ide/findrenameidentifier.lfm svneol=native#text/plain
 ide/findrenameidentifier.lrs svneol=native#text/pascal
@@ -1240,6 +1242,8 @@ ideintf/packageintf.pas svneol=native#text/pascal
 ideintf/projectintf.pas svneol=native#text/pascal
 ideintf/propedits.pp svneol=native#text/pascal
 ideintf/srceditorintf.pas svneol=native#text/pascal
+ideintf/stringgriddlg.lfm svneol=native#text/plain
+ideintf/stringgriddlg.lrs svneol=native#text/plain
 ideintf/stringspropeditdlg.lfm svneol=native#text/plain
 ideintf/stringspropeditdlg.lrs svneol=native#text/plain
 ideintf/texttools.pas svneol=native#text/pascal
