started Quick Fix menu items
 SVN 8780@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1101,6 +1101,7 @@ ide/makeresstrdlg.lfm svneol=native#text/plain
 ide/makeresstrdlg.lrs svneol=native#text/plain
 ide/makeresstrdlg.pas svneol=native#text/pascal
 ide/miscoptions.pas svneol=native#text/pascal
+ide/msgquickfixes.pas svneol=native#text/plain
 ide/msgview.lfm svneol=native#text/plain
 ide/msgview.lrs svneol=native#text/plain
 ide/msgview.pp svneol=native#text/pascal
@@ -1222,6 +1223,7 @@ ideintf/maskpropedit.lfm svneol=native#text/plain
 ideintf/maskpropedit.lrs svneol=native#text/plain
 ideintf/maskpropedit.pas svneol=native#text/plain
 ideintf/menuintf.pas svneol=native#text/plain
+ideintf/msgintf.pas svneol=native#text/plain
 ideintf/newfield.lfm svneol=native#text/plain
 ideintf/newfield.lrs svneol=native#text/pascal
 ideintf/newfield.pas svneol=native#text/pascal
