moved delphiunit2laz.pas to converter directory
 SVN 8785@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -497,6 +497,9 @@ components/turbopower_ipro/iputils.pas svneol=native#text/pascal
 components/turbopower_ipro/tiphtmlpanel.xpm -text svneol=native#image/x-xpixmap
 components/turbopower_ipro/turbopoweripro.lpk svneol=native#text/pascal
 components/turbopower_ipro/turbopoweripro.pas svneol=native#text/plain
+converter/delphiunit2laz.lfm svneol=native#text/plain
+converter/delphiunit2laz.lrs svneol=native#text/pascal
+converter/delphiunit2laz.pas svneol=native#text/pascal
 debugger/breakpointsdlg.lfm svneol=native#text/plain
 debugger/breakpointsdlg.lrs svneol=native#text/pascal
 debugger/breakpointsdlg.pp svneol=native#text/pascal
@@ -1011,9 +1014,6 @@ ide/debugmanager.pas svneol=native#text/pascal
 ide/debugoptionsfrm.lfm svneol=native#text/plain
 ide/debugoptionsfrm.lrs svneol=native#text/pascal
 ide/debugoptionsfrm.pas svneol=native#text/pascal
-ide/delphiunit2laz.lfm svneol=native#text/plain
-ide/delphiunit2laz.lrs svneol=native#text/pascal
-ide/delphiunit2laz.pas svneol=native#text/pascal
 ide/dialogprocs.pas svneol=native#text/pascal
 ide/diffdialog.lfm svneol=native#text/plain
 ide/diffdialog.lrs svneol=native#text/plain
