added multithreading example
 SVN 8790@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -886,6 +886,11 @@ examples/memotest.lpi svneol=native#text/plain
 examples/memotest.pp svneol=native#text/pascal
 examples/messagedialogs.lpi svneol=native#text/plain
 examples/messagedialogs.pp svneol=native#text/pascal
+examples/multithreading/mainunit.lfm svneol=native#text/plain
+examples/multithreading/mainunit.lrs svneol=native#text/plain
+examples/multithreading/mainunit.pas svneol=native#text/plain
+examples/multithreading/multithreadingexample1.lpi svneol=native#text/plain
+examples/multithreading/multithreadingexample1.lpr svneol=native#text/plain
 examples/notebk.lpi svneol=native#text/plain
 examples/notebk.pp svneol=native#text/pascal
 examples/notebku.pp svneol=native#text/pascal
