--- a/.gitattributes
+++ b/.gitattributes
@@ -901,6 +901,17 @@ examples/objectinspector/mainunit.lrs svneol=native#text/pascal
 examples/objectinspector/mainunit.pas svneol=native#text/pascal
 examples/objectinspector/oiexample.lpi svneol=native#text/plain
 examples/objectinspector/oiexample.lpr svneol=native#text/pascal
+examples/openbrowser/OpenURLInFirefox.sh svneol=native#text/plain
+examples/openbrowser/OpenURLInGaleon.sh svneol=native#text/plain
+examples/openbrowser/OpenURLInKonqueror.sh svneol=native#text/plain
+examples/openbrowser/OpenURLInMozilla.sh svneol=native#text/plain
+examples/openbrowser/OpenURLInNetscape.sh svneol=native#text/plain
+examples/openbrowser/OpenURLInOpera.sh svneol=native#text/plain
+examples/openbrowser/mainunit.lfm svneol=native#text/plain
+examples/openbrowser/mainunit.lrs svneol=native#text/plain
+examples/openbrowser/mainunit.pas svneol=native#text/plain
+examples/openbrowser/testbrowserrmc.lpi svneol=native#text/plain
+examples/openbrowser/testbrowserrmc.lpr svneol=native#text/plain
 examples/openglcontrol/data/particle.bmp -text svneol=unset#image/bmp
 examples/openglcontrol/data/texture1.bmp -text svneol=unset#image/bmp
 examples/openglcontrol/data/texture2.bmp -text svneol=unset#image/bmp
