added example how to stream components
 SVN 8810@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -810,6 +810,11 @@ examples/combobox.lpi svneol=native#text/plain
 examples/combobox.pp svneol=native#text/pascal
 examples/comdialogs.lpi svneol=native#text/plain
 examples/comdialogs.pp svneol=native#text/pascal
+examples/componentstreaming/componentstreaming.lpi svneol=native#text/plain
+examples/componentstreaming/componentstreaming.lpr svneol=native#text/plain
+examples/componentstreaming/mainunit.lfm svneol=native#text/plain
+examples/componentstreaming/mainunit.lrs svneol=native#text/plain
+examples/componentstreaming/mainunit.pas svneol=native#text/plain
 examples/dlgform.pp svneol=native#text/pascal
 examples/easter/about.lfm svneol=native#text/plain
 examples/easter/about.lrs svneol=native#text/pascal
