added example for IDE QuickFix item to fix Sender not used items
 SVN 8816@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -862,6 +862,9 @@ examples/groupboxnested.pas svneol=native#text/pascal
 examples/hello.lpi svneol=native#text/plain
 examples/hello.pp svneol=native#text/pascal
 examples/helloform.pp svneol=native#text/pascal
+examples/idequickfix/quickfixdemo1.pas svneol=native#text/plain
+examples/idequickfix/quickfixexample.lpk svneol=native#text/plain
+examples/idequickfix/quickfixexample.pas svneol=native#text/plain
 examples/imgviewer/file.bmp -text svneol=native#image/bmp
 examples/imgviewer/file.xpm -text svneol=native#image/x-xpixmap
 examples/imgviewer/frmmain.lfm svneol=native#text/plain
