new icons from JerneyL, added TLazComponentQueue for streaming components in lazarus binary format
 SVN 8826@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1364,6 +1364,7 @@ images/components/tchecklistbox.ico -text svneol=unset#image/x-icon
 images/components/tchecklistbox.xpm -text svneol=native#image/x-xpixmap
 images/components/tcolorbox.xpm -text svneol=native#image/x-xpixmap
 images/components/tcolorbutton.xpm -text svneol=native#image/x-xpixmap
+images/components/tcolorcombobox.xpm svneol=native#text/plain
 images/components/tcolordialog.ico -text svneol=unset#image/x-icon
 images/components/tcolordialog.xpm -text svneol=native#image/x-xpixmap
 images/components/tcombobox.ico -text svneol=unset#image/x-icon
@@ -1387,6 +1388,7 @@ images/components/tdbmemo.xpm -text svneol=native#image/x-xpixmap
 images/components/tdbnavigator.xpm -text svneol=native#image/x-xpixmap
 images/components/tdbradiogroup.xpm -text svneol=native#image/x-xpixmap
 images/components/tdbtext.xpm -text svneol=native#image/x-xpixmap
+images/components/tdialogtemplate.xpm svneol=native#text/plain
 images/components/tdirectoryedit.xpm -text svneol=native#image/x-xpixmap
 images/components/tdrawgrid.xpm -text svneol=native#image/x-xpixmap
 images/components/tedit.ico -text svneol=unset#image/x-icon
@@ -1409,6 +1411,7 @@ images/components/tinipropstorage.xpm -text svneol=native#image/x-xpixmap
 images/components/tlabel.ico -text svneol=unset#image/x-icon
 images/components/tlabel.xpm -text svneol=native#image/x-xpixmap
 images/components/tlabelededit.xpm -text svneol=native#image/x-xpixmap
+images/components/tlazcomponentqueue.xpm svneol=native#text/plain
 images/components/tlistbox.ico -text svneol=unset#image/x-icon
 images/components/tlistbox.xpm -text svneol=native#image/x-xpixmap
 images/components/tlistview.ico -text svneol=unset#image/x-icon
@@ -1434,6 +1437,8 @@ images/components/tpaintbox.xpm -text svneol=native#image/x-xpixmap
 images/components/tpairsplitter.xpm -text svneol=native#image/x-xpixmap
 images/components/tpanel.ico -text svneol=unset#image/x-icon
 images/components/tpanel.xpm -text svneol=native#image/x-xpixmap
+images/components/tpicture.xpm svneol=native#text/plain
+images/components/tpopup.xpm svneol=native#text/plain
 images/components/tpopupmenu.ico -text svneol=unset#image/x-icon
 images/components/tpopupmenu.xpm -text svneol=native#image/x-xpixmap
 images/components/tprinterdialog.ico -text svneol=unset#image/x-icon
@@ -1456,6 +1461,7 @@ images/components/tsavepicturedialog.xpm -text svneol=native#image/x-xpixmap
 images/components/tscrollbar.ico -text svneol=unset#image/x-icon
 images/components/tscrollbar.xpm -text svneol=native#image/x-xpixmap
 images/components/tscrollbox.xpm -text svneol=native#image/x-xpixmap
+images/components/tselectdirdialog.xpm svneol=native#text/plain
 images/components/tselectdirectorydialog.xpm -text svneol=native#image/x-xpixmap
 images/components/tshape.xpm -text svneol=native#image/x-xpixmap
 images/components/tspeedbutton.ico -text svneol=unset#image/x-icon
