fixed lpi for codetool example
 SVN 8829@trunk

--- a/components/codetools/examples/methodjumping.lpi
+++ b/components/codetools/examples/methodjumping.lpi
@@ -31,6 +31,9 @@
   </ProjectOptions>
   <CompilerOptions>
     <Version Value="5"/>
+    <SearchPaths>
+      <OtherUnitFiles Value="$(LazarusDir)/components/codetools/units/$(TargetCPU)-$(TargetOS)/"/>
+    </SearchPaths>
     <CodeGeneration>
       <Generate Value="Faster"/>
     </CodeGeneration>
