--- a/.gitattributes
+++ b/.gitattributes
@@ -59,9 +59,12 @@ components/codetools/codetree.pas svneol=native#text/pascal
 components/codetools/customcodetool.pas svneol=native#text/pascal
 components/codetools/definetemplates.pas svneol=native#text/pascal
 components/codetools/eventcodetool.pas svneol=native#text/pascal
+components/codetools/examples/finddeclaration.lpi svneol=native#text/plain
+components/codetools/examples/finddeclaration.lpr svneol=native#text/plain
 components/codetools/examples/methodjumping.lpi svneol=native#text/plain
 components/codetools/examples/methodjumping.pas svneol=native#text/plain
-components/codetools/examples/tgeneric2.pp svneol=native#text/plain
+components/codetools/examples/scanexamples/simpleunit1.pas svneol=native#text/plain
+components/codetools/examples/scanexamples/tgeneric2.pas svneol=native#text/plain
 components/codetools/expreval.pas svneol=native#text/pascal
 components/codetools/extractproctool.pas svneol=native#text/pascal
 components/codetools/fileprocs.pas svneol=native#text/pascal
