--- a/.gitattributes
+++ b/.gitattributes
@@ -495,6 +495,7 @@ components/turbopower_ipro/iputils.pas svneol=native#text/pascal
 components/turbopower_ipro/tiphtmlpanel.xpm -text svneol=native#image/x-xpixmap
 components/turbopower_ipro/turbopoweripro.lpk svneol=native#text/pascal
 components/turbopower_ipro/turbopoweripro.pas svneol=native#text/plain
+converter/delphiproject2laz.pas svneol=native#text/plain
 converter/delphiunit2laz.lfm svneol=native#text/plain
 converter/delphiunit2laz.lrs svneol=native#text/pascal
 converter/delphiunit2laz.pas svneol=native#text/pascal
