updated ignore property
 SVN 8858@trunk

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
+components/codetools/units
+components/synedit/units
+components/turbopower_ipro/units
+designer/jitform/units
+designer/units
+examples/units
 ide/revision.inc
+ide/units
+ideintf/units
+lcl/units
+packager/units
+/units
