--- a/.gitattributes
+++ b/.gitattributes
@@ -61,8 +61,14 @@ components/codetools/definetemplates.pas svneol=native#text/pascal
 components/codetools/eventcodetool.pas svneol=native#text/pascal
 components/codetools/examples/finddeclaration.lpi svneol=native#text/plain
 components/codetools/examples/finddeclaration.lpr svneol=native#text/plain
+components/codetools/examples/fixfilenames.lpi svneol=native#text/plain
+components/codetools/examples/fixfilenames.pas svneol=native#text/plain
 components/codetools/examples/methodjumping.lpi svneol=native#text/plain
 components/codetools/examples/methodjumping.pas svneol=native#text/plain
+components/codetools/examples/scanexamples/biglettersunit.pas svneol=native#text/plain
+components/codetools/examples/scanexamples/brokenfilenames.pas svneol=native#text/plain
+components/codetools/examples/scanexamples/brokenincfiles.inc svneol=native#text/plain
+components/codetools/examples/scanexamples/empty.inc svneol=native#text/plain
 components/codetools/examples/scanexamples/simpleunit1.pas svneol=native#text/plain
 components/codetools/examples/scanexamples/tgeneric2.pas svneol=native#text/plain
 components/codetools/expreval.pas svneol=native#text/pascal
