--- a/.gitattributes
+++ b/.gitattributes
@@ -2151,6 +2151,7 @@ lcl/lclproc.pas svneol=native#text/pascal
 lcl/lclrescache.pas svneol=native#text/pascal
 lcl/lclstrconsts.pas svneol=native#text/pascal
 lcl/lcltype.pp svneol=native#text/pascal
+lcl/lconv.pas svneol=native#text/plain
 lcl/ldockctrl.pas svneol=native#text/plain
 lcl/ldockctrledit.lfm svneol=native#text/plain
 lcl/ldockctrledit.lrs svneol=native#text/plain
