added lconv.xml document skeleton
 SVN 8899@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -727,6 +727,7 @@ docs/xml/lcl/lclproc.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/lclrescache.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/lclstrconsts.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/lcltype.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/lconv.xml svneol=LF#text/plain eol=lf
 docs/xml/lcl/ldockctrl.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/ldockctrledit.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/ldocktree.xml svneol=LF#text/xml eol=lf
