--- a/.gitattributes
+++ b/.gitattributes
@@ -1653,6 +1653,7 @@ languages/objinspstrconsts.es.po svneol=native#text/plain
 languages/objinspstrconsts.fi.po svneol=native#text/plain
 languages/objinspstrconsts.fr.po svneol=native#text/plain
 languages/objinspstrconsts.it.po svneol=native#text/plain
+languages/objinspstrconsts.ja.po svneol=native#text/plain
 languages/objinspstrconsts.nl.po svneol=native#text/plain
 languages/objinspstrconsts.pb.po svneol=native#text/plain
 languages/objinspstrconsts.pl.po svneol=native#text/plain
